@startuml

'West Valley College
'CIST-005B-32264
'Student Name: Luis Vargas Chacon
'Student ID: G08280596
'Email: lvargasc@mywvm.wvm.edu
'Team Name: The Infinite Loop
'Date: 03/23/2024

'Description: Palindrome Diagram
'This file is used to UML Class Diagram of the Palindrome Homework

'https://plantuml.com/class-diagram

abstract class Stack
{
     __len__()
     __str__()
     __iter__()
    __contains__()
    __add__()
    __eq__()
    def isEmpty()
    def clear()
    def peek()
    def push()
    def pop()
}

class LinkedStack{
    self.__head
    self.__tail
    self.__items
    self.__size
     __len__()
     __str__()
     __iter__()
    __contains__()
    __add__()
    __eq__()
    def isEmpty()
    def clear()
    def peek()
    def push()
    def pop()
}

abstract class AbstractQueue
{
     __len__()
     __str__()
     __iter__()
    __contains__()
    __add__()
    __eq__()
    def isEmpty()
    def clear()
    def peek()
    def enqueue()
    def dequeue()
}

class LinkedQueue{
    self.__head
    self.__items
    self.__size
     __len__()
     __str__()
     __iter__()
    __contains__()
    __add__()
    __eq__()
    def isEmpty()
    def clear()
    def peek()
    def enqueue()
    def dequeue()
}

class Palindrome{
    self.__queue
    self.__stack
    def is_palindrome()
}

class main{
    print_result_palindrome_check()
}

class Node{
    self.value
    self.next
}

LinkedStack -- Node

LinkedQueue -- Node

Stack <|-- LinkedStack
AbstractQueue <|-- LinkedQueue

LinkedStack -- Palindrome

LinkedQueue -- Palindrome

Palindrome -- main

@enduml